<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="main_header_text">My Nanodegree Apps!</string>
    <string name="app_spotify_text">Spotify Streamer</string>
    <string name="app_scores_text">Scores App</string>
    <string name="app_library_text">Library App</string>
    <string name="app_build_it_text">Build it bigger</string>
    <string name="app_xyz_reader_text">XYZ Reader</string>
    <string name="app_my_own_text">Capstone: My own App</string>

    <string name="not_found_message">%1$s is not yet implemented.</string>

</resources>
