<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/default_margin"
        tools:background="#38FFFF00"
        tools:context=".MainActivity">

        <TextView
            style="?android:textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_header_text"/>

        <Button
            android:id="@+id/spotify_button"
            style="@style/AppTheme.Button.Orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/app_spotify_text"/>

        <Button
            android:id="@+id/scores_button"
            style="@style/AppTheme.Button.Orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/app_scores_text"/>

        <Button
            android:id="@+id/library_button"
            style="@style/AppTheme.Button.Orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/app_library_text"/>

        <Button
            android:id="@+id/build_it_button"
            style="@style/AppTheme.Button.Orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/app_build_it_text"/>

        <Button
            android:id="@+id/xyz_button"
            style="@style/AppTheme.Button.Orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/app_xyz_reader_text"/>

        <Button
            android:id="@+id/my_own_app_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_red_button"
            android:minWidth="@dimen/min_button_width"
            android:text="@string/app_my_own_text"
            android:textColor="@android:color/white"/>

    </LinearLayout>
</ScrollView>
